--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="/rock(1).png">
     </div>
     <div class="choice" id="scissor">
-        <img src="/scissors(1).png">
+        <img src="https://github.com/Ruchi2205/Stone-Paper-Scissor-Game/blob/main/scissors(1).png">
     </div>
    </div>
    <div class="score-board">
