--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
    <h1>Rock Paper Scissors</h1>
    <div class="choices">
     <div class="choice" id="paper">
-        <img src="/paper(1).png">
+        <img src="paper(1).png">
     </div>
     <div class="choice" id="rock">
-        <img src="/rock(1).png">
+        <img src="rock(1).png">
     </div>
     <div class="choice" id="scissor">
-        <img src="https://github.com/Ruchi2205/Stone-Paper-Scissor-Game/blob/main/scissors(1).png">
+        <img src="scissors(1).png">
     </div>
    </div>
    <div class="score-board">
