--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    <div class="msg-container">
     <p id="msg">Play your move</p>
    </div>
-   <script src="/first.js"></script>
+   <script src="first.js"></script>
 </body>
 
 </html>
